--- a/build.yaml
+++ b/build.yaml
@@ -23,4 +23,6 @@ include:
   - board: nice_nano_v2
     shield: lily58_right
   - board: nice_nano_v2
+    shield: lily58_dongle
+  - board: nice_nano_v2
     shield: settings_reset
