--- a/config/boards/shields /Lily58/lily58.conf
+++ b/config/boards/shields /Lily58/lily58.conf
@@ -17,6 +17,6 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_EXT_POWER=y
 
 
-CONFIG_ZMK_KEYBOARD_NAME="Lily58"
+CONFIG_ZMK_KEYBOARD_NAME="lily58"
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=n
