--- a/build.yaml
+++ b/build.yaml
@@ -16,13 +16,39 @@
 #     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
 #     artifact-name: corne_left_with_logging
 #
----
-include:
+#---
+#include:
+#  - board: nice_nano_v2
+#    shield: lily58_left
+#  - board: nice_nano_v2
+#    shield: lily58_right
+#  - board: nice_nano_v2
+#    shield: lily58_dongle
+#  - board: nice_nano_v2
+#    shield: settings_reset
+
+      ### LILY58 START ###
+  # nice!oled lily58
   - board: nice_nano_v2
-    shield: lily58_left
+    shield: lily58_left nice_oled
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"lily58_Oled\"  -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SLEEP=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
+    artifact-name: nice_lily58_left_oled
+    snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
-    shield: lily58_right
+    shield: lily58_right nice_oled
+    cmake-args: -DCONFIG_ZMK_SLEEP=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
+    artifact-name: nice_lily58_right_oled
+
+  # peripheral_left
   - board: nice_nano_v2
-    shield: lily58_dongle
+    shield: lily58_left_peripheral nice_oled
+    cmake-args: -DCONFIG_ZMK_SLEEP=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
+    artifact-name: nice_lily58_left_peripheral_oled
+
+  # ProMicro_Dongle
   - board: nice_nano_v2
-    shield: settings_reset
+    shield: lily58_dongle_pro_micro dongle_display
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"lily58Dongle_P\"  -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SLEEP=n -DCONFIG_ZMK_IDLE_TIMEOUT=60000
+    artifact-name: nice_lily58_dongle_oled
+    snippet: studio-rpc-usb-uart
+  ### LILY58 END ###
