--- a/build.yaml
+++ b/build.yaml
@@ -50,5 +50,5 @@
     shield: lily58_dongle_pro_micro dongle_display
     cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"lily58Dongle_P\"  -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SLEEP=n -DCONFIG_ZMK_IDLE_TIMEOUT=60000
     artifact-name: nice_lily58_dongle_oled
-    snippet: studio-rpc-usb-uart
+#    snippet: studio-rpc-usb-uart
   ### LILY58 END ###
