--- a/config/west.yml
+++ b/config/west.yml
@@ -50,5 +50,5 @@ manifest:
     - name: zmk-oled-adapter
       remote: mctechnology17
       revision: main
-  #self:
-  #  path: config
+  self:
+    path: config
