--- a/build.yaml
+++ b/build.yaml
@@ -52,7 +52,8 @@
   #  artifact-name: nice_lily58_dongle_oled
 #    snippet: studio-rpc-usb-uart
   ### LILY58 END ###
-
+---
+include:
   - board: nice_nano_v2
     shield: lily58_left nice_oled
   #  cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"lily58_Oled\"  -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SLEEP=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
